[package]
name = "asset_loading"
version = "0.18.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", branch = "wasm", default-features = false, features = ["audio", "network", "renderer", "no-slow-safety-checks", "test-support"] }
application = { path = "../application" }
asset_model = { path = "../asset_model" }
derive-new = "0.5.8"
heck = "0.3.1"
log = "0.4.8"
object_type = { path = "../object_type" }
serde = { version = "1.0.105", features = ["derive"] }
serde_yaml = "0.8.11"
strum = "0.18.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm_support_fs = { path = "../wasm_support_fs" }
