[package]
name = "asset_loading"
version = "0.19.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", branch = "wasm", default-features = false, features = ["audio", "network", "renderer", "no-slow-safety-checks", "test-support", "wav", "web_socket"] }
application = { path = "../application" }
asset_model = { path = "../asset_model" }
derive-new = "0.5.8"
heck = "0.3.1"
log = "0.4.11"
object_type = { path = "../object_type" }
serde = { version = "1.0.116", features = ["derive"] }
serde_yaml = "0.8.13"
strum = "0.19.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm_support_fs = { path = "../wasm_support_fs" }
