[package]
name = "asset_model"
version = "0.17.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[lib]
doctest = true
test = false

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", features = ["no-slow-safety-checks", "vulkan"] }
derivative = "1.0.3"
derive-new = "0.5.8"
derive_builder = "0.9.0"
derive_deref = "1.1.0"
enum_variant_type = "0.2.0"
indexmap = { version = "1.3.1", features = ["serde-1"] }
object_type = { path = "../object_type" }
serde = { version = "1.0.104", features = ["derive"] }
slotmap = { version = "0.4.0", features = ["serde"] }
strum = "0.17.1"
strum_macros = "0.17.1"

[features]
nightly = ["amethyst/nightly"]
