[package]
name = "asset_model"
version = "0.19.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[lib]
doctest = true
test = false

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", branch = "wasm", default-features = false, features = ["audio", "network", "renderer", "no-slow-safety-checks", "test-support", "wav", "web_socket"] }
derivative = "2.2.0"
derive-new = "0.5.9"
derive_builder = "0.10.2"
derive_deref = "1.1.1"
enum_variant_type = "0.2.1"
indexmap = { version = "1.7.0", features = ["serde-1"] }
object_type = { path = "../object_type" }
serde = { version = "1.0.126", features = ["derive"] }
slotmap = { version = "1.0.5", features = ["serde"] }
strum = "0.21.0"
strum_macros = "0.21.1"
