[package]
name = "asset_play"
version = "0.17.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", features = ["no-slow-safety-checks", "vulkan"] }
application_menu = { path = "../application_menu" }
asset_model = { path = "../asset_model" }
asset_selection_ui_model = { path = "../asset_selection_ui_model" }
asset_ui_model = { path = "../asset_ui_model" }
audio_model = { path = "../audio_model" }
character_model = { path = "../character_model" }
chase_model = { path = "../chase_model" }
collision_model = { path = "../collision_model" }
derivative = "1.0.3"
derive-new = "0.5.8"
game_input_model = { path = "../game_input_model" }
input_reaction_model = { path = "../input_reaction_model" }
kinematic_model = { path = "../kinematic_model" }
mirrored_model = { path = "../mirrored_model" }
object_model = { path = "../object_model" }
object_type = { path = "../object_type" }
sequence_model = { path = "../sequence_model" }
spawn_model = { path = "../spawn_model" }
sprite_model = { path = "../sprite_model" }
ui_form_model = { path = "../ui_form_model" }
ui_label_model = { path = "../ui_label_model" }
ui_menu_item_model = { path = "../ui_menu_item_model" }
ui_model_spi = { path = "../ui_model_spi" }
