[package]
name = "asset_selection_model"
version = "0.1.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", features = ["no-slow-safety-checks", "vulkan"] }
asset_model = { path = "../asset_model" }
game_input_model = { path = "../game_input_model" }
serde = { version = "1.0.104", features = ["derive"] }
structopt = "0.3.9"
structopt-derive = "0.4.2"
