[package]
name = "asset_selection_model"
version = "0.19.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", branch = "wasm", default-features = false, features = ["audio", "network", "renderer", "no-slow-safety-checks", "test-support", "wav", "web_socket"] }
asset_model = { path = "../asset_model" }
game_input_model = { path = "../game_input_model" }
serde = { version = "1.0.105", features = ["derive"] }
structopt = "0.3.12"
structopt-derive = "0.4.5"
