[package]
name = "asset_selection_stdio"
version = "0.18.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", default-features = false, features = ["audio", "network", "renderer", "no-slow-safety-checks", "vulkan", "test-support"] }
application_event = { path = "../application_event" }
asset_model = { path = "../asset_model" }
asset_selection_model = { path = "../asset_selection_model" }
derivative = "2.1.0"
derive-new = "0.5.8"
game_input_model = { path = "../game_input_model" }
stdio_spi = { path = "../stdio_spi" }
