[package]
name = "asset_selection_ui_model"
version = "0.18.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", default-features = false, features = ["audio", "network", "renderer", "no-slow-safety-checks", "vulkan", "test-support"] }
asset_model = { path = "../asset_model" }
asset_selection_model = { path = "../asset_selection_model" }
asset_ui_model = { path = "../asset_ui_model" }
derivative = "2.1.0"
derive-new = "0.5.8"
derive_deref = "1.1.0"
game_input_model = { path = "../game_input_model" }
indexmap = { version = "1.3.2", features = ["serde-1"] }
kinematic_model = { path = "../kinematic_model" }
log = "0.4.8"
object_type = { path = "../object_type" }
parent_model = { path = "../parent_model" }
sequence_model = { path = "../sequence_model" }
serde = { version = "1.0.105", features = ["derive"] }
sprite_model = { path = "../sprite_model" }
ui_label_model = { path = "../ui_label_model" }
