[package]
name = "asset_selection_ui_play"
version = "0.18.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", branch = "wasm", default-features = false, features = ["audio", "network", "renderer", "no-slow-safety-checks", "gl", "test-support"] }
asset_model = { path = "../asset_model" }
asset_selection_model = { path = "../asset_selection_model" }
asset_selection_ui_model = { path = "../asset_selection_ui_model" }
asset_ui_model = { path = "../asset_ui_model" }
camera_model = { path = "../camera_model" }
derivative = "2.1.0"
derive-new = "0.5.8"
game_input_model = { path = "../game_input_model" }
kinematic_model = { path = "../kinematic_model" }
log = "0.4.8"
map_model = { path = "../map_model" }
map_play = { path = "../map_play" }
object_model = { path = "../object_model" }
object_type = { path = "../object_type" }
parent_model = { path = "../parent_model" }
sequence_model = { path = "../sequence_model" }
spawn_model = { path = "../spawn_model" }
spawn_play = { path = "../spawn_play" }
ui_audio_model = { path = "../ui_audio_model" }
ui_model_spi = { path = "../ui_model_spi" }
