[package]
name = "asset_ui_model"
version = "0.17.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", features = ["no-slow-safety-checks", "vulkan"] }
asset_model = { path = "../asset_model" }
camera_model = { path = "../camera_model" }
chase_model = { path = "../chase_model" }
derivative = "1.0.3"
derive-new = "0.5.8"
game_input = { path = "../game_input" }
kinematic_model = { path = "../kinematic_model" }
log = "0.4.8"
map_model = { path = "../map_model" }
map_play = { path = "../map_play" }
object_model = { path = "../object_model" }
object_type = { path = "../object_type" }
parent_model = { path = "../parent_model" }
sequence_model = { path = "../sequence_model" }
serde = { version = "1.0.104", features = ["derive"] }
spawn_model = { path = "../spawn_model" }
spawn_play = { path = "../spawn_play" }
ui_label_model = { path = "../ui_label_model" }
ui_model_spi = { path = "../ui_model_spi" }
ui_model_spi_play = { path = "../ui_model_spi_play" }

[features]
nightly = ["amethyst/nightly"]
