[package]
name = "asset_ui_model"
version = "0.19.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", branch = "wasm", default-features = false, features = ["audio", "network", "renderer", "no-slow-safety-checks", "test-support", "wav", "web_socket"] }
asset_model = { path = "../asset_model" }
asset_selection_model = { path = "../asset_selection_model" }
camera_model = { path = "../camera_model" }
chase_model = { path = "../chase_model" }
derivative = "2.2.0"
derive-new = "0.5.9"
derive_deref = "1.1.1"
indexmap = { version = "1.7.0", features = ["serde-1"] }
kinematic_model = { path = "../kinematic_model" }
log = "0.4.14"
map_model = { path = "../map_model" }
map_play = { path = "../map_play" }
object_model = { path = "../object_model" }
object_type = { path = "../object_type" }
parent_model = { path = "../parent_model" }
sequence_model = { path = "../sequence_model" }
serde = { version = "1.0.126", features = ["derive"] }
spawn_model = { path = "../spawn_model" }
spawn_play = { path = "../spawn_play" }
sprite_model = { path = "../sprite_model" }
ui_label_model = { path = "../ui_label_model" }
ui_model_spi = { path = "../ui_model_spi" }
ui_model_spi_play = { path = "../ui_model_spi_play" }
