[package]
name = "asset_ui_play"
version = "0.19.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", branch = "wasm", default-features = false, features = ["audio", "network", "renderer", "no-slow-safety-checks", "test-support", "wav", "web_socket"] }
asset_selection_model = { path = "../asset_selection_model" }
asset_ui_model = { path = "../asset_ui_model" }
chase_model = { path = "../chase_model" }
derivative = "2.1.1"
derive-new = "0.5.8"
game_input_model = { path = "../game_input_model" }
ui_model_spi = { path = "../ui_model_spi" }
