[package]
name = "assets_built_in"
version = "0.15.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
asset_model = { path = "../asset_model" }
lazy_static = "1.4.0"
background_model = { path = "../background_model" }
map_model = { path = "../map_model" }
