[package]
name = "assets_test"
version = "0.16.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"
publish = false

[lib]
doctest = false
test = false

[dependencies]
asset_model = { path = "../asset_model" }
lazy_static = "1.4.0"
object_type = { path = "../object_type" }
strum = "0.16.0"
