[package]
name = "audio_loading"
version = "0.14.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", features = ["no-slow-safety-checks", "vulkan"] }
audio_model = { path = "../audio_model" }
derive-new = "0.5.8"
log = "0.4.8"
typename = "0.1.1"
typename_derive = "0.1.3"

[features]
nightly = ["amethyst/nightly"]
