[package]
name = "audio_loading"
version = "0.16.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", features = ["no-slow-safety-checks", "vulkan"] }
audio_model = { path = "../audio_model" }
derive-new = "0.5.8"
log = "0.4.8"

[features]
nightly = ["amethyst/nightly"]
