[package]
name = "audio_model"
version = "0.14.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", features = ["no-slow-safety-checks", "vulkan"] }
asset_derive = { path = "../asset_derive" }
asset_loading = { path = "../asset_loading" }
derivative = "1.0.2"
derive-new = "0.5.8"
derive_deref = "1.1.0"
sequence_model_derive = { path = "../sequence_model_derive" }
sequence_model_spi = { path = "../sequence_model_spi" }
serde = "1.0.99"
specs-derive = "0.4.0"
typename = "0.1.1"
typename_derive = "0.1.3"

[dev-dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", features = ["no-slow-safety-checks", "test-support", "vulkan"] }
amethyst_test = { git = "https://github.com/amethyst/amethyst.git" }
assets_test = { path = "../assets_test" }

[features]
nightly = ["amethyst/nightly"]
