[package]
name = "audio_model"
version = "0.14.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[dependencies]
amethyst = { git = "https://github.com/azriel91/amethyst.git", features = ["no-slow-safety-checks", "vulkan"], branch = "maintenance/update-dependencies" }
asset_derive = { path = "../asset_derive" }
asset_loading = { path = "../asset_loading" }
asset_model = { path = "../asset_model" }
derivative = "1.0.2"
derive-new = "0.5.8"
derive_deref = "1.1.0"
sequence_model_derive = { path = "../sequence_model_derive" }
sequence_model_spi = { path = "../sequence_model_spi" }
serde = "1.0.99"
slotmap = "0.4.0"
typename = "0.1.1"
typename_derive = "0.1.3"

[dev-dependencies]
amethyst = { git = "https://github.com/azriel91/amethyst.git", features = ["no-slow-safety-checks", "test-support", "vulkan"], branch = "maintenance/update-dependencies" }
amethyst_test = { git = "https://github.com/azriel91/amethyst.git", branch = "maintenance/update-dependencies" }
assets_test = { path = "../assets_test" }

[features]
nightly = ["amethyst/nightly"]
