[package]
name = "audio_model"
version = "0.17.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", branch = "maintenance/correct-amethyst-test-features", default-features = false, features = ["audio", "network", "renderer", "no-slow-safety-checks", "vulkan", "test-support"] }
asset_derive = { path = "../asset_derive" }
asset_model = { path = "../asset_model" }
derivative = "1.0.3"
derive-new = "0.5.8"
derive_deref = "1.1.0"
sequence_model_derive = { path = "../sequence_model_derive" }
sequence_model_spi = { path = "../sequence_model_spi" }
serde = { version = "1.0.104", features = ["derive"] }
