[package]
name = "audio_play"
version = "0.16.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", features = ["no-slow-safety-checks", "vulkan"] }
audio_model = { path = "../audio_model" }
derivative = "1.0.3"
derive-new = "0.5.8"
sequence_model = { path = "../sequence_model" }

[features]
nightly = ["amethyst/nightly"]
