[package]
name = "audio_play"
version = "0.18.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", branch = "wasm", default-features = false, features = ["audio", "network", "renderer", "no-slow-safety-checks", "gl", "test-support"] }
audio_model = { path = "../audio_model" }
derivative = "2.1.0"
derive-new = "0.5.8"
sequence_model = { path = "../sequence_model" }
