[package]
name = "background_loading"
version = "0.15.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", features = ["no-slow-safety-checks", "vulkan"] }
derive-new = "0.5.8"
log = "0.4.8"
background_model = { path = "../background_model" }
sequence_model = { path = "../sequence_model" }
sprite_model = { path = "../sprite_model" }

[features]
nightly = ["amethyst/nightly"]
