[package]
name = "background_loading"
version = "0.17.0"
authors = ["Azriel Hoh <mail@azriel.im>"]
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", features = ["no-slow-safety-checks", "vulkan"] }
derive-new = "0.5.8"
background_model = { path = "../background_model" }

[features]
nightly = ["amethyst/nightly"]
